Melhorando o codigo